--- a/product-dev.yml
+++ b/product-dev.yml
@@ -1,1 +1,15 @@
 spring:
+   datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    username: root
+    password: root
+    url: jdbc:mysql://127.0.0.1:3306/springcloud_sell?characterEncoding=UTF-8&useSSL=false
+  jpa:
+   show-sql: true
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+env:
+  dev
