--- a/order.yml
+++ b/order.yml
@@ -11,6 +11,9 @@ spring:
     port: 5672
     username: guest
     password: guest
+  redis:
+    host: 192.168.2.73
+    port: 6379
 env:
   dev
 girl:
