--- a/product.yml
+++ b/product.yml
@@ -2,8 +2,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
-    password: root
-    url: jdbc:mysql://127.0.0.1:3306/springcloud_sell?characterEncoding=UTF-8&useSSL=false
+    password: 123456
+    url: jdbc:mysql://127.0.0.1:3306/imooc?characterEncoding=UTF-8&useSSL=false
   jpa:
    show-sql: true
   rabbitmq:
@@ -11,9 +11,6 @@ spring:
     port: 5672
     username: guest
     password: guest
-  redis:
-    host: 192.168.40.162
-    port: 6379
 env:
   dev
 girl:
