--- a/product.yml
+++ b/product.yml
@@ -3,7 +3,7 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: root
-    url: jdbc:mysql://127.0.0.1:3306/imooc?characterEncoding=UTF-8&useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/cloud?characterEncoding=UTF-8&useSSL=false
   jpa:
    show-sql: true
   rabbitmq:
