--- a/order.yml
+++ b/order.yml
@@ -3,7 +3,7 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: root
-    url: jdbc:mysql://127.0.0.1:3306/springcloud_sell?characterEncoding=UTF-8&useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/cloud?characterEncoding=UTF-8&useSSL=false
   jpa:
    show-sql: true
   rabbitmq:
@@ -11,11 +11,3 @@ spring:
     port: 5672
     username: guest
     password: guest
-  redis:
-    host: 192.168.40.162
-    port: 6379
-env:
-  dev
-girl:
-  name: mike
-  age: 20
