--- a/order.yml
+++ b/order.yml
@@ -11,6 +11,15 @@ spring:
     port: 5672
     username: guest
     password: guest
+#配置链路追踪的地址和输送消息的方式
+  zipkin:
+    base-url: http://10.10.10.140:9411/
+    sender:
+      type: web
+#配置请求信息输送到外部服务的百分比,默认是0.1f
+  sleuth:
+    sampler:
+      probability: 1
 #配置全局的触发服务降级的超时时间
 feign:
   client:
