--- a/order.yml
+++ b/order.yml
@@ -1,41 +1,21 @@
 spring:
-  datasource:
-    driver-class-name: com.mysql.jdbc.Driver
-    username: root
-    password: root
-    url: jdbc:mysql://127.0.0.1:3306/cloud?characterEncoding=UTF-8&useSSL=false
-  jpa:
-   show-sql: true
+  application:
+    name: ORDER
   rabbitmq:
-    host: localhost
+    host: 10.231.63.137
     port: 5672
-    username: guest
-    password: guest
-#配置链路追踪的地址和输送消息的方式
-  zipkin:
-    base-url: http://10.10.10.140:9411/
-    sender:
-      type: web
-#配置请求信息输送到外部服务的百分比,默认是0.1f
-  sleuth:
-    sampler:
-      probability: 1
-#配置全局的触发服务降级的超时时间
-feign:
+    username: longtou-sit
+    password: F345Gg6hRMvFHyh9
+    virtual-host: c3-oim-sit  
+server:
+  port: 9090
+eureka:
   client:
-    config:
-      default:
-        connectTimeout: 5000
-        readTimeout: 5000
-        loggerLevel: basic
-#给单个方法配置全局的触发服务降级的超时时间,getProductStockByIdAndRestemp是方法名称
-    getProductStockByIdAndRestemp:
-      execution:
-        isolation:
-          thread:
-            timeoutInMilliseconds: 3000
-management:
-  context-path: /
-girl:
-  name: lili
-  age: 18
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+  instance:
+    hostname: orderHostName
+PRODUCT:
+  ribbon:
+    NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule       
+env: dev
